syntax = "proto3";

// AddrBookRecord represents a record for a log in the address book.
message AddrBookRecord {
    // Thread ID.
    bytes threadID = 1;

	// The peer ID.
    bytes peerID = 2 ;

	// The multiaddresses. This is a sorted list where element 0 expires the soonest.
	repeated AddrEntry addrs = 3;

	// AddrEntry represents a single multiaddress.
	message AddrEntry {
		bytes addr = 1 ;

		// The point in time when this address expires.
		int64 expiry = 2;

		// The original TTL of this address.
		int64 ttl = 3;
	}
}

// HeadBookRecord represents the list of heads currently in a log
message HeadBookRecord {
	// List of current heads of a log.
	repeated HeadEntry heads = 1;

	// HeadEntry represents a single cid.
	message HeadEntry {
		bytes cid = 1 ;

		int64 counter = 2;
	}
}